--- a/resources/sass/partials/_dashboard.scss
+++ b/resources/sass/partials/_dashboard.scss
@@ -11,6 +11,8 @@
     border-radius:10px;
     box-shadow: 1px 1px 20px gray;
     padding:10px;
+    overflow: auto;
+    
     h2{
       margin-bottom: 35px;
       text-align: center;
